--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -1,7 +1,7 @@
 ---
-layout: default
+layout: default-book
 ---
-<article class="content-area">
+<article class="content-area content-book">
   <header class="entry-header">
     <h1 class="entry-title">{{ page.title }}</h1>
   </header>
